--- a/App/package.json
+++ b/App/package.json
@@ -11,14 +11,21 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "drei": "^2.2.21",
+    "lerp": "^1.0.3",
     "netlify": "^6.0.12",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-intersection-observer": "^8.31.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.0.0",
+    "react-three-fiber": "^5.3.22",
     "stripe": "^8.130.0",
     "styled-components": "^5.2.1",
+    "three": "^0.127.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
