VTS11 Dodate ostale funkcije

--- a/App/package.json
+++ b/App/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "drei": "^2.2.21",
+    "firebase": "^8.4.3",
     "lerp": "^1.0.3",
     "netlify": "^6.0.12",
     "node-sass": "^5.0.0",
